fix: change path and missing color
- remove not needed /public/... path
- change color from loading bar

--- a/src/css/components/fonts.css
+++ b/src/css/components/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Lato';
-    src: url('/public/fonts/lato/Lato-Regular.ttf');
+    src: url('/fonts/lato/Lato-Regular.ttf');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Lato';
-    src: url('/public/fonts/lato/Lato-SemiBold.ttf');
+    src: url('/fonts/lato/Lato-SemiBold.ttf');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: 'Lato';
-    src: url('/public/fonts/lato/Lato-Bold.ttf');
+    src: url('/fonts/lato/Lato-Bold.ttf');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
     font-family: 'Nunito Sans';
-    src: url('/public/fonts/nunito-sans/NunitoSans-Regular.ttf');
+    src: url('/fonts/nunito-sans/NunitoSans-Regular.ttf');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -32,7 +32,7 @@
 
 @font-face {
     font-family: 'Nunito Sans';
-    src: url('/public/fonts/nunito-sans/NunitoSans-Medium.ttf');
+    src: url('/fonts/nunito-sans/NunitoSans-Medium.ttf');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -40,7 +40,7 @@
 
 @font-face {
     font-family: 'Nunito Sans';
-    src: url('/public/fonts/nunito-sans/NunitoSans-SemiBold.ttf');
+    src: url('/fonts/nunito-sans/NunitoSans-SemiBold.ttf');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -48,7 +48,7 @@
 
 @font-face {
     font-family: 'Nunito Sans';
-    src: url('/public/fonts/nunito-sans/NunitoSans-Bold.ttf');
+    src: url('/fonts/nunito-sans/NunitoSans-Bold.ttf');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
